<resources>
    <string name="app_name">TakeCare AdminPanels</string>
    <string name="title_activity_home_page">Home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_internet">No Internet</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="retry">Retry</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="super_admin">Super Admin</string>
    <string name="doctor_admin">Doctor AdminPanel</string>
    <string name="laboratory_admin_panel">Laboratory Admin Panel</string>
    <string name="pharmacy_admin_panel">Pharmacy Admin Panel</string>
    <string name="takecare_contact">TakeCare Contact</string>
    <string name="rider_panel">Rider Panel</string>
    <string name="todo">TODO</string>
    <string name="contact_us">Contact Us</string>
    <string name="are_you_doctor">Are you Doctor?</string>
    <string name="rate_us">Rate US</string>
    <string name="about_us">About Us</string>
</resources>