<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Contact"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:onClick="Con"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/Doctor_Request"
            android:onClick="Doctor_Request_Form"
            android:icon="@drawable/doctor2"
            android:title="@string/are_you_doctor" />
        <item
            android:id="@+id/Ratting"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:onClick="rating"
            android:title="@string/rate_us" />
    </group>
</menu>