<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_page">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Home_page"
    tools:ignore="ExtraText">


    ///////////////////////////////layout 1/////////////////////////////////

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:onClick="SuperAdmin"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:onClick="SuperAdmin"
                    app:srcCompat="@drawable/admin"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView4"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:onClick="SuperAdmin"
                    android:text="@string/super_admin"
                    android:textColor="#2E7D32"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:ignore="UsingOnClickInXml" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:onClick="Doctor_Admin"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    android:onClick="Doctor_Admin"
                    app:srcCompat="@drawable/doctor"
                    tools:ignore="ContentDescription,UsingOnClickInXml" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView5"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:onClick="Doctor_Admin"
                    android:text="@string/doctor_admin"
                    android:textColor="#2E7D32"
                    android:textSize="17sp"
                    android:textStyle="bold|italic"
                    tools:ignore="UsingOnClickInXml" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    //////////////////////////layout 1 ends////////////////////////////////

    ///////////////////////////////layout 2 /////////////////////////////////

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1"
        app:layout_constraintVertical_bias="0.087">

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp"
            android:onClick="Lab_Admin"
            app:cardUseCompatPadding="false"
            tools:ignore="UsingOnClickInXml">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/lab_admin"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView6"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/laboratory_admin_panel"
                    android:textColor="#2E7D32"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:onClick="Pharmacy_Admin"
            app:cardMaxElevation="10dp"
            app:cardUseCompatPadding="false"
            tools:ignore="UsingOnClickInXml">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="Pharmacy_Admin"
                android:background="@color/white"
                android:gravity="center_horizontal"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/fyp_img"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:onClick="Pharmacy_Admin"
                    app:srcCompat="@drawable/phy_admin"
                    android:contentDescription="@string/todo"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/text_fyp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fyp_img"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:onClick="Pharmacy_Admin"
                    android:text="@string/pharmacy_admin_panel"
                    android:textColor="#2E7D32"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    ///////////////////////////////layout 2 ends/////////////////////////////////

    ///////////////////////////////layout 3/////////////////////////////////

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l2">
        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="Rider"
                android:background="@color/white"
                android:gravity="center_horizontal"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/hostal_img"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:onClick="Rider"
                    app:srcCompat="@drawable/rider"
                    tools:ignore="ContentDescription,UsingOnClickInXml" />

                <TextView
                    android:id="@+id/text_hostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hostal_img"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:onClick="Rider"
                    android:text="@string/rider_panel"
                    android:textColor="#2E7D32"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:ignore="UsingOnClickInXml" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:onClick="Con"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:onClick="Con"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/contact"
                    tools:ignore="ContentDescription,UsingOnClickInXml" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/takecare_contact"
                    android:onClick="Con"
                    android:textColor="#2E7D32"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    //////////////////////////layout 3 ends////////////////////////////////
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
